--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,157 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
+.header-container {
+  height: 25vh;
+  background-image: url("./assets/worldmap.png");
+  background-position: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+}
+
+.parrot-img {
+  width: 6em;
+  height: fit-content;
+}
+
+.header-text-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.header-text-title {
+  color: #32CD32;
+  font-family: 'Big Shoulders Display', sans-serif;
+  font-size: 2.6rem;
+  font-weight: 800;
+  line-height: 1.5;
+}
+
+.header-text-description {
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 0.75rem;
+  font-weight: 600;
+  line-height: 1.5;
+}
+
+.main-container {
+  padding: 2em 1em;
+  height: 75vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content-container {
+  border: 4px solid #252F42;
+  border-radius: 0.9em;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5em;
+}
+
+.content-label {
+  color: #035A9D;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+}
+
+textarea {
+  width: 100%;
+  box-sizing: border-box;
+  resize: none;
+  border: none;
+  background-color: #EFF0F4;
+  border-radius: 0.6em;
+  padding: 0.6em;
+}
+
+.languages-container, .translate-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5em;
+  justify-self: end;
+  width: 100%;
+}
+
+.content-text {
+  color: #333;
+  font-family: Poppins;
+  font-size: 1.25rem;
+  font-weight: 600;
+  line-height: 1.5;
+}
+
+.languages {
+  align-self: flex-start;
+}
+
+.language-container {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5em;
+  margin-left: 0em;
+}
+
+label {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.flag {
+  border: 1px solid #999999;
+}
+
+button {
+  border-radius: 0.4rem;
+  border: none;
+  background-color: #035A9D;
+  width: 100%;
+  color: #FFF;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.5;
+  display: flex;
+  padding: 0.4rem 0 0.4rem 0;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+.result-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1.5em;
+}
+
+@media screen and (min-width: 400px)  {
+  body {
+    width: 400px;
+    display: block;
+    margin: 0 auto;
+    border: 1px solid black;
+  }
+}
