--- a/src/index.css
+++ b/src/index.css
@@ -153,8 +153,9 @@ button {
   width: 100%;
 }
 
-@media screen and (min-width: 400px)  {
+@media screen and (min-width: 480px)  {
   body {
+    width: 480px;
     display: block;
     margin: 0 auto;
   }
